# tado

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
docs/source/: conf.py
libtado/: __main__.py  api.py  api_async.py
