[tool.poetry]
name = "libtado"
license = "GPLv3"
version = "0.1.0"
description = ""
authors = ["MrGreenTea <mrlordalfred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
