[tool.poetry]
name = "libtado"
license = "GPLv3"
version = "0.1.0"
description = ""
authors = ["MrGreenTea <mrlordalfred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
glom = "^19.2"
cachetools = "^3.1"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.3"
hypothesis = "^4.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
